# mkdocs-pages-testing

./: 404.html  LICENSE  README.md  index.html  index.md  mkdocs.yml  objects.inv  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  incorrect_content.md  page-suggestion.md
.github/workflows/: ci.yaml  ci_example.yaml
docs/: info.md
info/: index.html
package/: functions.py
