[metadata]
name = mkdocs-pages-testing
author = jday7879
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.extras_require]
dev =
    bump2version>=1.0.0
    pre-commit>=2.6.0
    ruff>=0.0.270
    chispa>=0.9.2
    coverage[toml]>=7.1.0
    pytest>=7.1.0, <8.0.0  # Temporarily pin pytest due to compatibility issues
    pytest-cov>=4.0.0
    pytest-lazy-fixture>=0.6.0
    pytest-mock>=3.8.0
doc =
    mkdocs>=1.4.2
    mkdocs-tech-docs-template>=0.1.2
    mkdocstrings[python]>=0.22.0
    mkdocs-git-revision-date-localized-plugin>=1.2.1
    mkdocs-jupyter>=0.24.3